--- a/index.html
+++ b/index.html
@@ -20,22 +20,109 @@
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/1284430910.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 
 </head>
 
 <!-- i <body> har man alt indhold på siden -->
 <body>
+<div class="container-fluid">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #f1e6e2; color:#2A2547;">
+    <a href="portfolio.html" class="navbar-brand">Sara Henriksen</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="index.html" class="nav-link">Cv</a>
+            </li>
+            <li class="nav-item">
+                <a href="portfolio.html" class="nav-link">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a href="kontakt.html" class="nav-link">Kontakt</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+    <div class="om-mig row col-12 pl-0">
+        <div class="profilbillede col-8 col-md-4 pl-0 pt-4 pr-0">
+            <img src="img/IMG_1650.JPG" class=" w-100 pl-0" alt="">
+        </div>
+        <div class="tekst col-10 pt-2 col-md-7 col-xl-5 pt-md-5 mt-5 mx-auto">
+            <p>På min uddannelse har jeg arbejdet med grafisk design, SoMe og webudvikling af hjemmesider.</p>
+            <p>Jeg vil beskrive mig selv, som en frisk og positiv person, der altid har et smil på læben og ser positivt på problemerne når de skal løses. Og så er jeg selvfølgelig også mødestabil og en flittig person. Derudover, er jeg kreativ og er meget fascineret af grafisk design, og kodning. jeg elsker at lærer noget nyt og er altid frisk på en udfordring.</p>
+        </div>
+    </div>
+    <div class="om-mig2 row col-12 mt-5 mx-auto">
+        <div class="edu col-12 col-sm-6 ml-md-5 col-xl-6">
+            <h3 class="pl-2"><i class="fa fa-graduation-cap"></i> Uddannelse</h3>
+            <ul>
+                <li><span>Multimediedesign<br>Zealand</span><br><small>2018 - 2020</small></li>
+                <li><span>EUS - speciale i Detail </span><br><small>Niels Brock</small><br><small>2018 - 2018</small></li>
+                <li><span>STX</span><br><small>Slagelse Gymnasium</small><br><small>2013-2016</small></li>
+            </ul>
+        </div>
+
+        <div class="statistikkode col-12 col-md-4 ml-md-5 col-lg-4 col-xl-5">
+            <h3><i class="fa fa-code"></i> Progamerings skills</h3>
+            <div class="programmer-kode">
+
+                <h4>HTML5</h4>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">95%</div>
+                </div>
+
+                <h4>CSS3/SASS</h4>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                </div>
+
+                <h4>JAVASCRIPT / jQuery</h4>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                </div>
+
+                <h4>BOOTSTRAP</h4>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                </div>
+
+                <h4>Node js</h4>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                </div>
+
+                <h4>Gulp</h4>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                </div>
+
+                <h4>Git</h4>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function (e) {
-    });
+<script>
+    feather.replace();
 </script>
 </body>
 </html>
