ok.. its done now

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
 
     <!-- Titel som ses oppe i browserens tab mv. -->
-    <title>Sigende titel</title>
+    <title>CV | Opgave 1</title>
 
     <!-- Metatags der fortæller at søgemaskiner er velkomne, hvem der udgiver siden og copyright information -->
     <meta name="robots" content="All">
@@ -60,8 +60,9 @@
             <img src="img/IMG_1650.JPG" class=" w-100 pl-0" alt="">
         </div>
         <div class="tekst col-10 pt-2 col-md-7 col-xl-5 pt-md-5 mt-5 mx-auto">
-            <p>På min uddannelse har jeg arbejdet med grafisk design, SoMe og webudvikling af hjemmesider.</p>
-            <p>Jeg vil beskrive mig selv, som en frisk og positiv person, der altid har et smil på læben og ser positivt på problemerne når de skal løses. Og så er jeg selvfølgelig også mødestabil og en flittig person. Derudover, er jeg kreativ og er meget fascineret af grafisk design, og kodning. jeg elsker at lærer noget nyt og er altid frisk på en udfordring.</p>
+            <h2> Hej alle!</h2>
+            <p>og velkommen til min side</p>
+            <p> Mit navn er Sara og kommer fra Slagelse. Min passion er kodning og grafisk design, og jeg elsker at være beskæftigelse med dem. Til hverdag går jeg på Zealand og studere multimedie design og går snart i gang med mit fjerder og endelige semester. alle mine kodnings opgaver og projekter ligger her inde, mens alle det grafiske kan findes på min behance.</p>
         </div>
     </div>
     <div class="om-mig2 row col-12 mt-5 mx-auto">
@@ -80,47 +81,60 @@
 
                 <h4>HTML5</h4>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">95%</div>
+                    <div class="progress-bar" id="progress-html" role="progressbar" data-percent="95%">95%</div>
                 </div>
 
                 <h4>CSS3/SASS</h4>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                    <div class="progress-bar" id="progress-scss" role="progressbar" data-percent="90%">90%</div>
                 </div>
 
                 <h4>JAVASCRIPT / jQuery</h4>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                    <div class="progress-bar" id="progress-javascript" role="progressbar" data-percent="60%">60%</div>
                 </div>
 
                 <h4>BOOTSTRAP</h4>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                    <div class="progress-bar" id="progress-bootstrap" role="progressbar" data-percent="60%">60%</div>
                 </div>
 
                 <h4>Node js</h4>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                    <div class="progress-bar" id="progress-nodejs" role="progressbar" data-percent="70%">70%</div>
                 </div>
 
                 <h4>Gulp</h4>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                    <div class="progress-bar" id="progress-gulp" role="progressbar" data-percent="70%">70%</div>
                 </div>
 
                 <h4>Git</h4>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                    <div class="progress-bar" id="progress-git" role="progressbar"  data-percent="50%">50%</div>
                 </div>
             </div>
         </div>
     </div>
+    <footer class="kontakinfo mx-auto pt-5 mt-5">
+        <div class="kontaktitems col-12 col-md-6 mx-auto">
+        <p style="font-size: 25px; text-align: center;">Find mig på</p>
+        <div class="some row mx-auto ">
+            <a href =""><i class="fab fa-instagram"></i></a>
+            <a href =""><i class="fab fa-behance"></i></a>
+            <a href =""><i class="fab fa-twitter"></i></a>
+            <a href =""><i class="fab fa-facebook-f"></i></a>
+            <a href =""><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        </div>
+    </footer>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/progressbar.js"></script>
 <script>
     feather.replace();
 </script>
