--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
 
     <!-- Titel som ses oppe i browserens tab mv. -->
-    <title>Sigende titel</title>
+    <title>CV | Opgave 1</title>
 
     <!-- Metatags der fortæller at søgemaskiner er velkomne, hvem der udgiver siden og copyright information -->
     <meta name="robots" content="All">
@@ -95,6 +95,18 @@
             </div>
         </div>
     </div>
+    <footer class="kontakinfo mx-auto pt-5 mt-5">
+        <div class="kontaktitems col-12 col-md-6 mx-auto">
+            <p style="font-size: 25px; text-align: center;">Find mig på</p>
+            <div class="some row mx-auto ">
+                <a href =""><i class="fab fa-instagram"></i></a>
+                <a href =""><i class="fab fa-behance"></i></a>
+                <a href =""><i class="fab fa-twitter"></i></a>
+                <a href =""><i class="fab fa-facebook-f"></i></a>
+                <a href =""><i class="fab fa-linkedin-in"></i></a>
+            </div>
+        </div>
+    </footer>
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
