Lille ændring inden deadline

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     </div>
     <footer class="kontakinfo mx-auto pt-5 mt-5">
         <div class="kontaktitems col-12 col-md-6 mx-auto">
-        <p style="font-size: 25px; text-align: center;">Find mig på</p>
-        <div class="some row mx-auto ">
+        <p style="font-size: 25px; text-align: left;">Find mig på</p>
+        <div class="some row col-12 ">
             <a href =""><i class="fab fa-instagram"></i></a>
             <a href =""><i class="fab fa-behance"></i></a>
             <a href =""><i class="fab fa-twitter"></i></a>
