--- a/kontakt.html
+++ b/kontakt.html
@@ -96,11 +96,11 @@
 
             </div>
     </div>
-</div>
-<footer class="kontakinfo mx-auto pt-5 mt-5">
+
+    <footer class="kontakinfo mx-auto pt-5 mt-5">
     <div class="kontaktitems col-12 col-md-6 mx-auto">
-        <p style="font-size: 25px; text-align: center;">Find mig på</p>
-        <div class="some row mx-auto ">
+        <p style="font-size: 25px; text-align: left;">Find mig på</p>
+        <div class="some row col-12 ">
             <a href =""><i class="fab fa-instagram"></i></a>
             <a href =""><i class="fab fa-behance"></i></a>
             <a href =""><i class="fab fa-twitter"></i></a>
@@ -109,6 +109,8 @@
         </div>
     </div>
 </footer>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
